fixes minor dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ a {
 }
 
 .video-iframe {
-  width: 560px;
+  width: 100%;
   height: 315px;
 }
 
@@ -66,7 +66,7 @@ a {
 }
 
 .switch__label {
-  padding: 20px;
+  padding: 15px;
   display: block;
   text-align: center;
 }
