--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -34,11 +34,6 @@
   .profile__name {
     font-size: 1.4em;
   }
-
-  .video-iframe {
-    width: 400px;
-    height: 300px;
-  }
 }
 
 @media (max-width: 760px) {
@@ -87,8 +82,8 @@
   .switch {
     display: block;
     position: absolute;
-    top: 4.8em;
-    right: 5em;
+    top: 5em;
+    right: 4em;
   }
 }
 
@@ -99,6 +94,10 @@
 
   .header-container {
     height: 120px;
+  }
+
+  .social-networks {
+    text-align: left;
   }
 
   .main-nav {
@@ -140,7 +139,6 @@
   }
 
   .video-iframe {
-    width: 300px;
     height: 200px;
   }
 }
